Format to fix the Nav Bar & Text Spacing

--- a/public/CSS/Site.css
+++ b/public/CSS/Site.css
@@ -6,6 +6,9 @@ h1{
   color: Yellow;
   text-align: center;
 }
+h2{
+  color: yellow;
+}
 h3{
   color: White;
   text-align: center;
